fix profiles about java compiler args